	  try to resolve library-name via environment COB_COPY_LIB_library-name
	  before testing as-is and additional fallback to "ignore library-name"
	  for compatibility to earlier GnuCOBOL and MF versions
	* pplex.l: don't add extension if already part of the copybook-name,
	  for compatibility: can be disabled by defining COB_MULTI_EXTENSION

2020-10-31  Simon Sobisch <simonsobisch@gnu.org>

	* codegen.c (output_initialize_compound): resolve occurs_max only once
	* cobc.c, flag.def: added -fno-dump=<scope>
	* flag.def, cobc.c, cobc.h, help.c: added CB_FLAG_OP for flags
	  with optional parameter

2020-10-26  Simon Sobisch <simonsobisch@gnu.org>

	* cobc.c, config.c: defaults.h removed
	* cobc.c (cobc_getenv, cobc_getenv_path): return leading space
	  for later error reporting
	* cobc.c: allow omitting the definition for COB_EXPORT_DYN, COB_SHARED_OPT,
	  COB_PIC_FLAGS via config.h (mostly for MSVC)
	* cobc.c (cobc_print_info): extracted common code to cobc_var_and_envvar_print
	  and additionally check environment var for "empty"
	* Makefile.am: pass LOCALEDIR via define

2020-10-17  Simon Sobisch <simonsobisch@gnu.org>

	* codegen.c (output_cobol_info): fixed C89 declaration
	* codegen.c: minor optimizations in generating pre-calculated offsets
	  and check for flag_filler instead of strcmp

2020-10-13  Simon Sobisch <simonsobisch@gnu.org>

	* codegen.c (output_size): limit variable scope
	* codegen.c (output_initialize_uniform): limit variable scope and
	  calculation in chk_field_variable_size to be only done if used
	* tree.c (cb_name_errmsg): removed and logic merged into new literal handling
	  upon merge of 2020-01-03
	* pplex.l (plex_call_destroy): added cleanup for internal copybook references
	* help.c (cobc_print_usage_warnings): added -w option

2020-10-12  Ron Norman <rjn@inglenet.com>

	* typeck.c: Flag internal variables with 'flag_real_binary'
	* codegen.c: Emit USAGE INDEX and internal binary variables 
	  as COB_TYPE_NUMERIC_COMP5
